# video-splitter

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  ffmpeg.rs  lib.rs  main.rs
src/components/: DurationInput.tsx  FileDropZone.tsx  OutputSelector.tsx  ProgressBar.tsx  RangeEditor.tsx  RangeSelector.tsx  ResultList.tsx  SplitModeSelector.tsx  ThemeToggle.tsx  TimeRangeEditor.tsx  VideoPlayer.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: usePreviewSource.ts  useVideoSplit.ts
